--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic" rel="stylesheet" />
     <title>Ohmyfood</title>
     <link rel="stylesheet" href="mobile.css">
+    <link rel="stylesheet" href="desktop.css">
+    <link rel="stylesheet" href="tablette.css">
+    <link rel="shortcut icon" href="images/logo/favicon.png">
 </head>
 <body>
      <!--HEADER-->
@@ -21,12 +24,85 @@
         <i class="fa-map-marker-alt fas local__icon"></i>
         <h2 class="paris-belleville">Paris, Belleville</h2>
     </div>
-</main>
+
 <section class="explorer">
     <h2>Réservez le menu qui<br> vous convient</h2>
     <p>Découvrez des restaurants d'exception, séléctionnés par nos soins</p>
     <button>Explorer nos restaurants</button>
 </section>
+<section class="fonctionnement">
+    <h2>Fonctionnement</h2>
+    <ol class="liste">
+        <li class="icone"><i class="fa-mobile-alt fas"></i>Choisissez un restaurant</li>
+        <li class="icone"><i class="fa-list-ul fas"></i>Composez votre menu</li>
+        <li class="icone"><i class="fa-store fas"></i>Dégustez au restaurant</li>
+    </ol>
+</section>
+
+<section class="restaurants"> 
+    <h2>Restaurants</h2>
+    <div class="articles">
+    <article class="carte-restaurants">
+        <a href="#">
+            <figure class="carte">
+            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="la palette du gout" class="carte-img">
+            <span class="nouveau">Nouvear</span>
+            <figcaption>
+                <h3>La palette du goût</h3>
+                <p>Ménilmontant</p>
+                <i  class="icone-aime far fa-heart"></i>
+            </figcaption>
+            </figure>
+        </a>
+    </article>
+    <article class="carte-restaurants">
+        <a href="#">
+            <figure class="carte">
+            <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="La note enchantée" class="carte-img">
+            <span class="nouveau">Nouvear</span>
+            <figcaption>
+                <h3>La note enchantée</h3>
+                <p>Charonne</p>
+                <i class="icone-aime far fa-heart"></i>
+            </figcaption>
+            </figure>
+            </a>
+
+    </article>
+    <article class="carte-restaurants">
+        <a href="#">
+            <figure class="carte">
+            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="la palette du gout" class="carte-img">
+            <figcaption>
+                <h3>À la française</h3>
+                <p>Cité rouge</p>
+                <i class="icone-aime far fa-heart"></i>
+            </figcaption>
+            </figure>
+            </a>
+    </article>
+    <article class="carte-restaurants">
+        <a href="#">
+            <figure class="carte">
+            <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="la palette du gout" class="carte-img">
+            <figcaption>
+                <h3>Le délice du sens</h3>
+                <p>Folie-méricourt</p>
+                <i class="icone-aime far fa-heart"></i>
+            </figcaption>
+            </figure>
+            </a>
+    </article>
+</div>
+</section>
+</main>
+<footer>
+    <h2>Ohmyfood</h2>
+    <a href="#"><p><i class="fa-utensils fas"></i>Proposer un restaurant</p></a>
+    <a href="#"><p><i class="fa-hands-helping fas"></i>Devenir partenaire</p></a>
+    <a href="#"><p>Mentions légales</p></a>
+    <a href="#"><p>Contact</p></a>
+</footer>
     
 
     
