--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
         <li class="icone"><i class="fa-mobile-alt fas"></i>Choisissez un restaurant</li>
         <li class="icone"><i class="fa-list-ul fas"></i>Composez votre menu</li>
         <li class="icone"><i class="fa-store fas"></i>Dégustez au restaurant</li>
-    </ol>
+    </ol> 
+
 </section>
 
 <section class="restaurants"> 
@@ -46,7 +47,7 @@
         <a href="#">
             <figure class="carte">
             <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="la palette du gout" class="carte-img">
-            <span class="nouveau">Nouvear</span>
+            <span class="nouveau">Nouveau</span>
             <figcaption>
                 <h3>La palette du goût</h3>
                 <p>Ménilmontant</p>
@@ -58,21 +59,21 @@
     <article class="carte-restaurants">
         <a href="#">
             <figure class="carte">
-            <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="La note enchantée" class="carte-img">
-            <span class="nouveau">Nouvear</span>
+            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée" class="carte-img">
+            <span class="nouveau">Nouveau</span>
             <figcaption>
                 <h3>La note enchantée</h3>
                 <p>Charonne</p>
                 <i class="icone-aime far fa-heart"></i>
             </figcaption>
-            </figure>
-            </a>
+            </figure> 
+            </a> 
 
     </article>
     <article class="carte-restaurants">
         <a href="#">
             <figure class="carte">
-            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="la palette du gout" class="carte-img">
+            <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="la palette du gout" class="carte-img">
             <figcaption>
                 <h3>À la française</h3>
                 <p>Cité rouge</p>
@@ -84,7 +85,7 @@
     <article class="carte-restaurants">
         <a href="#">
             <figure class="carte">
-            <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="la palette du gout" class="carte-img">
+            <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="la palette du gout" class="carte-img">
             <figcaption>
                 <h3>Le délice du sens</h3>
                 <p>Folie-méricourt</p>
