modifier mobile style et ajouter une class icone-localisation sur index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <main>
         <!--section paris belleville -->
     <div class="localisation">
-        <i class="fa-map-marker-alt fas local__icon"></i>
+        <i class="fa-map-marker-alt fas icone-localisation"></i>
         <h2 class="paris-belleville">Paris, Belleville</h2>
     </div>
 
