page la palette du goût, mobile style sur la page menu

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <h2>Restaurants</h2>
     <div class="articles">
     <article class="carte-restaurants">
-        <a href="#">
+        <a href="./restaurant-1.htm">
             <figure class="carte">
             <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="la palette du gout" class="carte-img">
             <span class="nouveau">Nouveau</span>
@@ -104,8 +104,5 @@
     <a href="#"><p>Mentions légales</p></a>
     <a href="#"><p>Contact</p></a>
 </footer>
-    
-
-    
 </body>
 </html>
