--- a/restaurant-1.htm
+++ b/restaurant-1.htm
@@ -32,21 +32,54 @@
         <i  class="icone-aime far fa-heart"></i>
         </div>
         <!--section entrée-->
-        <section class="entrée">
+        <section class="titre-menu">
             <h3>Entrées</h3>
-            <div class="entrée-un">
+            <div class="menuidem">
                 <h4>Fricassée d'escargot</h4>
                 <p>Au piment d'Espelette <span>25€</span></p>
             </div>
-            <div class="entrée-deux">
+            <div class="menuidem">
                 <h4>Foie gras de canard mi-cuit</h4>
                 <p>Et ses copeaux de truffe noire<span>35€</span></p>
             </div>
-            <div class="entrée-trois">
+            <div class="menuidem">
                 <h4>Oeuf au plat</h4>
                 <p>Assaisonné à la truffe sur lit de caviar<span>20€</span></p>
             </div>
         </section>
+        <section class="titre-menu">
+            <h3>Plats</h3>
+            <div class="menuidem">
+                <h4>Filet de boeuf aux herbes</h4>
+                <p>Accompagné de sa ribambelle de légumes <span>40€</span></p>
+            </div>
+            <div class="menuidem">
+                <h4>Parmentier de queue de boeuf</h4>
+                <p>À la truffe noire sur sa purée de panais<span>35€</span></p>
+            </div>
+            <div class="menuidem">
+                <h4>Filet de turbot</h4>
+                <p>Aux agrumes<span>44€</span></p>
+            </div>
+        </section>
+        <section class="titre-menu">
+            <h3>Desserts</h3>
+            <div class="menuidem">
+                <h4>Paris-Brest</h4>
+                <p>Revisité <span>18€</span></p>
+            </div>
+            <div class="menuidem">
+                <h4>Macaron au chocolat d'exception</h4>
+                <p>Et glace à la vanille de Madagascar<span>22€</span></p>
+            </div>
+            <div class="menuidem">
+                <h4>Mousse au chocolat</h4>
+                <p>Au piment d'Espelette et à la truffe noire<span>23€</span></p>
+            </div>
+        </section>
+        <div class="commander">
+            <button class="button-commander">Commander</button>
+        </div>
     </main>
 
 
