ajouter un lien pour le retour a la page d'acceuil et modifier color icone retour

--- a/restaurant-1.htm
+++ b/restaurant-1.htm
@@ -17,14 +17,16 @@
       <!--HEADER-->
       <header>
         <div class="entête">
+            <a href="index.html">
             <i class="fa-arrow-left fas header__arrow"></i>
+            </a>
             <h1>Ohmyfood</h1>
         </div>
     </header>
     <!--section image-palette-->
-    <section class="image-palette">
+    <div class="image-palette">
         <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="la palette du gout">
-    </section>
+    </div>
     <!--menu-->
     <main class="menu">
         <div class="titre">
