--- a/restaurant-1.htm
+++ b/restaurant-1.htm
@@ -18,7 +18,7 @@
       <header>
         <div class="entête">
             <a href="index.html">
-            <i class="fa-arrow-left fas header__arrow"></i>
+            <i class="fa-arrow-left fas"></i>
             </a>
             <h1>Ohmyfood</h1>
         </div>
@@ -83,11 +83,6 @@
             <button class="button-commander">Commander</button>
         </div>
     </main>
-
-
-
-
-
     <footer>
         <h2>Ohmyfood</h2>
         <a href="#"><p><i class="fa-utensils fas"></i>Proposer un restaurant</p></a>
