--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </a>
     </article>
     <article class="carte-restaurants">
-        <a href="#">
+        <a href="./restaurant-2.html">
             <figure class="carte">
             <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée" class="carte-img">
             <span class="nouveau">Nouveau</span>
