ajouter la page menu (À la française) et ajouter les liens sur index.html

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     </article>
     <article class="carte-restaurants">
-        <a href="#">
+        <a href="./restaurant-3.html">
             <figure class="carte">
             <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="la palette du gout" class="carte-img">
             <figcaption>
