ajouter la page menu (Le délice des sens) et ajouter les liens sur index.html

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </a>
     </article>
     <article class="carte-restaurants">
-        <a href="#">
+        <a href="./restaurant-4.html">
             <figure class="carte">
             <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="la palette du gout" class="carte-img">
             <figcaption>
