ajouter une class prix et ajouter overflow page-mobile style

--- a/restaurant-2.html
+++ b/restaurant-2.html
@@ -38,49 +38,80 @@
             <h3>Entrées</h3>
             <div class="menuidem">
                 <h4>Ravioles de foie gras</h4>
-                <p>Accompagnés de leur crème à la truffe <span>25€</span></p>
+                <div class="prix">
+                <p>Accompagnés de leur crème à la truffe</p>
+                <span>25€</span>
+                </div>
+                </div>
             </div>
             <div class="menuidem">
                 <h4>Caviar osciètre</h4>
-                <p>Sur blini à la farine de blé noir<span>35€</span></p>
+                <div class="prix">
+                <p>Sur blini à la farine de blé noir</p>
+                <span>35€</span>
+                </div>
             </div>
             <div class="menuidem">
                 <h4>Homard et espuma de potiron</h4>
-                <p>Mariné aux zestes d'orange<span>20€</span></p>
+                <div class="prix">
+                <p>Mariné aux zestes d'orange</p>
+                <span>20€</span>
+                </div>
             </div>
             <div class="menuidem">
                 <h4>Foie gras de canard cuit entier</h4>
-                <p>Confiture de figue et pain toasté<span>35€</span></p>
+                <div class="prix">
+                <p>Confiture de figue et pain toasté</p>
+                <span>35€</span>
+                </div>
             </div>
         </section>
         <section class="titre-menu">
             <h3>Plats</h3>
             <div class="menuidem">
                 <h4>Noix de coquilles Saint-Jacques</h4>
-                <p>Sur lit de purée de céleri-rave<span>40€</span></p>
+                <div class="prix">
+                <p>Sur lit de purée de céleri-rave</p>
+                <span>40€</span>
+                </div>
             </div>
             <div class="menuidem">
                 <h4>Langoustine poêlée</h4>
-                <p>Purée de patate douce<span>35€</span></p>
+                <div class="prix">
+                <p>Purée de patate douce</p>
+                <span>35€</span>
+                </div>
             </div>
             <div class="menuidem">
                 <h4>Mijoté de queue de boeuf </h4>
-                <p>Et riz sauvage aux zestes de citron<span>44€</span></p>
+                <div class="prix">
+                <p>Et riz sauvage aux zestes de citron</p>
+                <span>44€</span>
+                </div>
             </div>
         </section>
         <section class="titre-menu">
             <h3>Desserts</h3>
             <div class="menuidem">
                 <h4>Macaron noisette et chocolat</h4>
-                <p>Revisité <span>18€</span></p>
+                <div class="prix">
+                <p>Revisité</p> 
+                <span>18€</span>
+                </div>
             </div>
             <div class="menuidem">
                 <h4>Macaron au chocolat d'exception</h4>
-                <p>Glace au caramel brun et sel de Guérande<span>18€</span></p>
+                <div class="prix">
+                <p>Glace au caramel brun et sel de Guérande</p>
+                <span>18€</span>
+                </div>
             </div>
             <div class="menuidem">
                 <h4>Tarte au citron meringuée</h4>
-                <p>Déstructurée<span>23€</span></p>
+                <div class="prix">
+                <p>Déstructurée</p>
+                <span>23€</span>
+                </div>
             </div>
         </section>
         <div class="commander">
