--- a/restaurant-4.html
+++ b/restaurant-4.html
@@ -38,45 +38,72 @@
             <h3>Entrées</h3>
             <div class="menuidem">
                 <h4>Tartare de thon</h4>
-                <p>Assaisonné au yuzu<span>25€</span></p>
+                <div class="prix">
+                <p>Assaisonné au yuzu</p>
+                <span>25€</span>
+                </div>
             </div>
             <div class="menuidem">
                 <h4>Bouchée de homard croustillant</h4>
-                <p>Et sa farandole de petits légumes<span>35€</span></p>
+                <div class="prix">
+                <p>Et sa farandole de petits légumes</p>
+                <span>35€</span>
+                </div>
             </div>
             <div class="menuidem">
                 <h4>Velouté de cèpes</h4>
-                <p>Aux truffes<span>20€</span></p>
+                <div class="prix">
+                <p>Aux truffes</p>
+                <span>20€</span>
+                </div>
             </div>
         </section>
         <section class="titre-menu">
             <h3>Plats</h3>
             <div class="menuidem">
                 <h4>Poulet rôti aux herbes de Provence</h4>
-                <p>Et sa crème de truffe<span>40€</span></p>
+                <div class="prix">
+                <p>Et sa crème de truffe</p>
+                <span>40€</span>
+                </div>
             </div>
             <div class="menuidem">
                 <h4>Langouste rôtie</h4>
-                <p>Et ses légumes de saison<span>35€</span></p>
+                <div class="prix">
+                <p>Et ses légumes de saison</p>
+                <span>35€</span>
+                </div>
             </div>
             <div class="menuidem">
                 <h4>Côte de boeuf Angus </h4>
-                <p>Et sa purée de panais<span>44€</span></p>
+                <div class="prix">
+                <p>Et sa purée de panais</p>
+                <span>44€</span>
+                </div>
             </div>
         </section>
         <section class="titre-menu">
             <h3>Desserts</h3>
             <div class="menuidem">
                 <h4>Farandole de desserts</h4>
-                <p>Du chef <span>18€</span></p>
+                <div class="prix">
+                <p>Du chef </p>
+                <span>18€</span>
+                </div>
             </div>
             <div class="menuidem">
                 <h4>Crème brulée</h4>
-                <p>Revisité<span>22€</span></p>
+                <div class="prix">
+                <p>Revisité</p>
+                <span>22€</span>
+                </div>
             </div>
             <div class="menuidem">
                 <h4>Tiramisu</h4>
-                <p>À la noisette<span>23€</span></p>
+                <div class="prix">
+                <p>À la noisette</p>
+                <span>23€</span>
+                </div>
             </div>
         </section>
         <div class="commander">
