--- a/restaurant-1.htm
+++ b/restaurant-1.htm
@@ -38,45 +38,77 @@
             <h3>Entrées</h3>
             <div class="menuidem">
                 <h4>Fricassée d'escargot</h4>
-                <p>Au piment d'Espelette <span>25€</span></p>
+                <div class="prix">
+                <p>Au piment d'Espelette </p>
+                <span>25€</span>
+                </div>
+                <div class="menu-confirmation">
+                    <div class="menu-icon"> 
+                    <i class="fas fa-check icon-confirmation"></i>
+                    </div>
+                </div>
             </div>
             <div class="menuidem">
                 <h4>Foie gras de canard mi-cuit</h4>
-                <p>Et ses copeaux de truffe noire<span>35€</span></p>
+                <div class="prix">
+                <p>Et ses copeaux de truffe noire</p>
+                <span>35€</span>
+                </div>
             </div>
             <div class="menuidem">
                 <h4>Oeuf au plat</h4>
-                <p>Assaisonné à la truffe sur lit de caviar<span>20€</span></p>
+                <div class="prix">
+                <p>Assaisonné à la truffe sur lit de caviar</p>
+                <span>20€</span>
+                </div>
             </div>
         </section>
         <section class="titre-menu">
             <h3>Plats</h3>
             <div class="menuidem">
                 <h4>Filet de boeuf aux herbes</h4>
-                <p>Accompagné de sa ribambelle de légumes <span>40€</span></p>
+                <div class="prix">
+                <p>Accompagné de sa ribambelle de légumes</p>
+                <span>40€</span>
+                </div>
             </div>
             <div class="menuidem">
                 <h4>Parmentier de queue de boeuf</h4>
-                <p>À la truffe noire sur sa purée de panais<span>35€</span></p>
+                <div class="prix">
+                <p>À la truffe noire sur sa purée de panais</p>
+                <span>35€</span>
+                </div>
             </div>
             <div class="menuidem">
                 <h4>Filet de turbot</h4>
-                <p>Aux agrumes<span>44€</span></p>
+                <div class="prix">
+                <p>Aux agrumes</p>
+                <span>44€</span>
+                </div>
             </div>
         </section>
         <section class="titre-menu">
             <h3>Desserts</h3>
             <div class="menuidem">
                 <h4>Paris-Brest</h4>
-                <p>Revisité <span>18€</span></p>
+                <div class="prix">
+                <p>Revisité</p>
+                <span>18€</span>
+                </div>
             </div>
             <div class="menuidem">
                 <h4>Macaron au chocolat d'exception</h4>
-                <p>Et glace à la vanille de Madagascar<span>22€</span></p>
+                <div class="prix">
+                <p>Et glace à la vanille de Madagascar</p>
+                <span>22€</span>
+                </div>
             </div>
             <div class="menuidem">
                 <h4>Mousse au chocolat</h4>
-                <p>Au piment d'Espelette et à la truffe noire<span>23€</span></p>
+                <div class="prix">
+                <p>Au piment d'Espelette et à la truffe noire</p>
+                <span>23€</span>
+                </div>
             </div>
         </section>
         <div class="commander">
