ajouter page desktop pour les 4 restaurant

--- a/restaurant-1.htm
+++ b/restaurant-1.htm
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Shrikhand:regular" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic" rel="stylesheet" />
     <link rel="stylesheet" href="page-mobile.css">
-    <link rel="stylesheet" href="desktop.css">
+    <link rel="stylesheet" href="page-desktop.css">
     <link rel="stylesheet" href="tablette.css">
     <link rel="shortcut icon" href="images/logo/favicon.png">
     <title>La palette du goût</title>
@@ -34,6 +34,7 @@
         <i  class="icone-aime far fa-heart"></i>
         </div>
         <!--section entrée-->
+        <div class="entrée-plat-dessert">
         <section class="titre-menu">
             <h3>Entrées</h3>
             <div class="menuidem">
@@ -111,6 +112,7 @@
                 </div>
             </div>
         </section>
+        </div>
         <div class="commander">
             <button class="button-commander">Commander</button>
         </div>
