ajouter la page tablette style et des modifications sur toutes le htm et css

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
      <!--HEADER-->
     <header>
-        <h1>Ohmyfood</h1>
+        <h1>ohmyfood</h1>
     </header>
 <main>
         <!--section paris belleville -->
@@ -98,11 +98,13 @@
 </section>
 </main>
 <footer>
-    <h2>Ohmyfood</h2>
+    <h2>ohmyfood</h2>
+    <div class="footer-information">
     <a href="#"><p><i class="fa-utensils fas"></i>Proposer un restaurant</p></a>
     <a href="#"><p><i class="fa-hands-helping fas"></i>Devenir partenaire</p></a>
     <a href="#"><p>Mentions légales</p></a>
     <a href="#"><p>Contact</p></a>
+    </div>
 </footer>
 </body>
 </html>
