--- a/restaurant-4.html
+++ b/restaurant-4.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic" rel="stylesheet" />
     <link rel="stylesheet" href="page-mobile.css">
     <link rel="stylesheet" href="page-desktop.css">
-    <link rel="stylesheet" href="tablette.css">
+    <link rel="stylesheet" href="page-tablette.css">
     <link rel="shortcut icon" href="images/logo/favicon.png">
     <title>La palette du goût</title>
 </head>
@@ -20,7 +20,7 @@
             <a href="index.html">
             <i class="fa-arrow-left fas"></i>
             </a>
-            <h1>Ohmyfood</h1>
+            <h1>ohmyfood</h1>
         </div>
     </header>
     <!--section image-palette-->
@@ -113,11 +113,13 @@
         </div>
     </main>
     <footer>
-        <h2>Ohmyfood</h2>
+        <h2>ohmyfood</h2>
+        <div class="footer-information">
         <a href="#"><p><i class="fa-utensils fas"></i>Proposer un restaurant</p></a>
         <a href="#"><p><i class="fa-hands-helping fas"></i>Devenir partenaire</p></a>
         <a href="#"><p>Mentions légales</p></a>
         <a href="#"><p>Contact</p></a>
+        </div>
     </footer>
 </body>
 </html>
