renomer les pages restaurants ajouter animation sur les menus

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <link rel="shortcut icon" href="images/logo/favicon.png">
 </head>
 <body>
+    <div class="loader">
+    <span class="chargement"></span> 
+    </div>
      <!--HEADER-->
     <header>
         <h1>ohmyfood</h1>
@@ -35,7 +38,7 @@
     <ol class="liste">
         <li class="icone"><i class="fa-mobile-alt fas"></i>Choisissez un restaurant</li>
         <li class="icone"><i class="fa-list-ul fas"></i>Composez votre menu</li>
-        <li class="icone"><i class="fa-store fas"></i>Dégustez au restaurant</li>
+        <li class="icone"><i class="fa-store fas store"></i>Dégustez au restaurant</li>
     </ol> 
 
 </section>
@@ -44,52 +47,60 @@
     <h2>Restaurants</h2>
     <div class="articles">
     <article class="carte-restaurants">
-        <a href="./restaurant-1.htm">
+        <a href="./La-palette-du-goût.htm">
             <figure class="carte">
             <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="la palette du gout" class="carte-img">
             <span class="nouveau">Nouveau</span>
             <figcaption>
                 <h3>La palette du goût</h3>
                 <p>Ménilmontant</p>
-                <i  class="icone-aime far fa-heart"></i>
+                <div class="heart">
+                <i class="icone-aime far fa-heart"></i>
+                </div>
             </figcaption>
             </figure>
         </a>
     </article>
     <article class="carte-restaurants">
-        <a href="./restaurant-2.html">
+        <a href="./La-note-enchantée.html">
             <figure class="carte">
             <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée" class="carte-img">
             <span class="nouveau">Nouveau</span>
             <figcaption>
                 <h3>La note enchantée</h3>
                 <p>Charonne</p>
-                <i class="icone-aime far fa-heart"></i>
+                <div class="heart">
+                    <i class="icone-aime far fa-heart"></i>
+                </div>
             </figcaption>
             </figure> 
             </a> 
 
     </article>
     <article class="carte-restaurants">
-        <a href="./restaurant-3.html">
+        <a href="./À-la-française.html">
             <figure class="carte">
             <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="la palette du gout" class="carte-img">
             <figcaption>
                 <h3>À la française</h3>
                 <p>Cité rouge</p>
-                <i class="icone-aime far fa-heart"></i>
+                <div class="heart">
+                    <i class="icone-aime far fa-heart"></i>
+                </div>
             </figcaption>
             </figure>
             </a>
     </article>
     <article class="carte-restaurants">
-        <a href="./restaurant-4.html">
+        <a href="./Le-délice-des-sens.html">
             <figure class="carte">
             <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="la palette du gout" class="carte-img">
             <figcaption>
                 <h3>Le délice du sens</h3>
                 <p>Folie-méricourt</p>
-                <i class="icone-aime far fa-heart"></i>
+                <div class="heart">
+                    <i class="icone-aime far fa-heart"></i>
+                </div>
             </figcaption>
             </figure>
             </a>
