--- a/La-note-enchantée.html
+++ b/La-note-enchantée.html
@@ -37,8 +37,8 @@
         <div class="entrée-plat-dessert">
         <section class="titre-menu">
             <h3>Entrées</h3>
-            <div class="delay-0 menuidem">
-                <div class="menu-déscription">
+            <div class="menu-item">
+                <div class="menu-description">
                 <h4>Ravioles de foie gras</h4>
                 <p>Accompagnés de leur crème à la truffe</p>
                 </div>
@@ -51,8 +51,8 @@
                 </div>
                 </div>
             </div>
-            <div class="delay-1 menuidem">
-                <div class="menu-déscription">
+            <div class="menu-item">
+                <div class="menu-description">
                     <h4>Caviar osciètre</h4>
                     <p>Sur blini à la farine de blé noir</p>
                     </div>
@@ -65,8 +65,8 @@
                     </div>
                     </div>
                 </div>
-            <div class="delay-2 menuidem">
-                <div class="menu-déscription">
+            <div class="menu-item">
+                <div class="menu-description">
                     <h4>Homard et espuma de potiron</h4>
                     <p>Mariné aux zestes d'orange</p>
                     </div>
@@ -79,8 +79,8 @@
                     </div>
                     </div>
                 </div>
-            <div class="delay-3 menuidem">
-                <div class="menu-déscription">
+            <div class="menu-item">
+                <div class="menu-description">
                     <h4>Foie gras de canard cuit entier</h4>
                     <p>Confiture de figue et pain toasté</p>
                     </div>
@@ -96,8 +96,8 @@
         </section>
         <section class="titre-menu">
             <h3>Plats</h3>
-            <div class="delay-4 menuidem">
-                <div class="menu-déscription">
+            <div class="menu-item">
+                <div class="menu-description">
                     <h4>Noix de coquilles Saint-Jacques</h4>
                     <p>Sur lit de purée de céleri-rave</p>
                     </div>
@@ -110,8 +110,8 @@
                     </div>
                     </div>
                 </div>
-            <div class="delay-5 menuidem">
-                <div class="menu-déscription">
+            <div class="menu-item">
+                <div class="menu-description">
                     <h4>Langoustine poêlée</h4>
                     <p>Purée de patate douce</p>
                     </div>
@@ -124,8 +124,8 @@
                     </div>
                     </div>
                 </div>
-            <div class="delay-6 menuidem">
-                <div class="menu-déscription">
+            <div class="menu-item">
+                <div class="menu-description">
                     <h4>Mijoté de queue de boeuf</h4>
                     <p>Et riz sauvage aux zestes de citron</p>
                     </div>
@@ -141,8 +141,8 @@
         </section>
         <section class="titre-menu">
             <h3>Desserts</h3>
-            <div class="delay-7 menuidem">
-                <div class="menu-déscription">
+            <div class="menu-item">
+                <div class="menu-description">
                     <h4>Macaron noisette et chocolat</h4>
                     <p>Glace au caramel brun et sel de Guérande</p>
                     </div>
@@ -155,8 +155,8 @@
                     </div>
                     </div>
                 </div>
-            <div class="delay-8 menuidem">
-                <div class="menu-déscription">
+            <div class="menu-item">
+                <div class="menu-description">
                     <h4>Baba au rhum revisité</h4>
                     <p>Avec son coulis de citron</p>
                     </div>
@@ -169,8 +169,8 @@
                     </div>
                     </div>
                 </div>
-            <div class="delay-9 menuidem">
-                <div class="menu-déscription">
+            <div class="menu-item">
+                <div class="menu-description">
                     <h4>Tarte au citron meringuée </h4>
                     <p>Déstructurée</p>
                     </div>
