--- a/La-palette-du-goût.htm
+++ b/La-palette-du-goût.htm
@@ -37,8 +37,8 @@
         <div class="entrée-plat-dessert">
         <section class="titre-menu">
             <h3>Entrées</h3>
-            <div class="delay-0 menuidem">
-                <div class="menu-déscription">
+            <div class="menu-item">
+                <div class="menu-description">
                 <h4>Fricassée d'escargot</h4>
                 <p>Au piment d'Espelette </p>
                 </div>
@@ -51,8 +51,8 @@
                 </div>
                 </div>
             </div>
-            <div class="delay-1 menuidem">
-                <div class="menu-déscription">
+            <div class="menu-item">
+                <div class="menu-description">
                     <h4>Foie gras de canard mi-cuit</h4>
                     <p>Et ses copeaux de truffe noire</p>
                     </div>
@@ -65,8 +65,8 @@
                     </div>
                     </div>
                 </div>
-            <div class="delay-2 menuidem">
-                <div class="menu-déscription">
+            <div class="menu-item">
+                <div class="menu-description">
                     <h4>Oeuf au plat</h4>
                     <p>Assaisonné à la truffe sur lit de caviar</p>
                     </div>
@@ -82,8 +82,8 @@
         </section>
         <section class="titre-menu">
             <h3>Plats</h3>
-            <div class="delay-4 menuidem">
-                <div class="menu-déscription">
+            <div class="menu-item">
+                <div class="menu-description">
                     <h4>Filet de boeuf aux herbes</h4>
                     <p>Accompagné de sa ribambelle de légumes</p>
                     </div>
@@ -96,8 +96,8 @@
                     </div>
                     </div>
                 </div>
-            <div class="delay-5 menuidem">
-                <div class="menu-déscription">
+            <div class="menu-item">
+                <div class="menu-description">
                     <h4>Parmentier de queue de boeuf</h4>
                     <p>À la truffe noire sur sa purée de panais</p>
                     </div>
@@ -110,8 +110,8 @@
                     </div>
                     </div>
                 </div>
-            <div class="delay-6 menuidem">
-                <div class="menu-déscription">
+            <div class="menu-item">
+                <div class="menu-description">
                     <h4>Filet de turbot</h4>
                     <p>Aux agrumes</p>
                     </div>
@@ -127,8 +127,8 @@
         </section>
         <section class="titre-menu">
             <h3>Desserts</h3>
-            <div class="delay-7 menuidem">
-                <div class="menu-déscription">
+            <div class="menu-item">
+                <div class="menu-description">
                     <h4>Paris-Brest</h4>
                     <p>Revisité</p>
                     </div>
@@ -141,8 +141,8 @@
                     </div>
                     </div>
                 </div>
-            <div class="delay-8 menuidem">
-                <div class="menu-déscription">
+            <div class="menu-item">
+                <div class="menu-description">
                     <h4>Macaron au chocolat d'exception</h4>
                     <p>Et glace à la vanille de Madagascar</p>
                     </div>
@@ -155,8 +155,8 @@
                     </div>
                     </div>
                 </div>
-            <div class="delay-9 menuidem">
-                <div class="menu-déscription">
+            <div class="menu-item">
+                <div class="menu-description">
                     <h4>Mousse au chocolat</h4>
                     <p>Au piment d'Espelette et à la truffe noire</p>
                     </div>
