--- a/Le-délice-des-sens.html
+++ b/Le-délice-des-sens.html
@@ -37,8 +37,8 @@
         <div class="entrée-plat-dessert">
         <section class="titre-menu">
             <h3>Entrées</h3>
-            <div class="delay-0 menuidem">
-                <div class="menu-déscription">
+            <div class="menu-item">
+                <div class="menu-description">
                 <h4>Tartare de thon</h4>
                 <p>Assaisonné au yuzu</p>
                 </div>
@@ -51,8 +51,8 @@
                 </div>
                 </div>
             </div>
-            <div class="delay-1 menuidem">
-                <div class="menu-déscription">
+            <div class="menu-item">
+                <div class="menu-description">
                     <h4>Bouchée de homard croustillant</h4>
                     <p>Et sa farandole de petits légumes</p>
                     </div>
@@ -65,8 +65,8 @@
                     </div>
                     </div>
                 </div>
-            <div class="delay-2 menuidem">
-                <div class="menu-déscription">
+            <div class="menu-item">
+                <div class="menu-description">
                     <h4>Velouté de cèpes</h4>
                     <p>Aux truffes</p>
                     </div>
@@ -82,8 +82,8 @@
         </section>
         <section class="titre-menu">
             <h3>Plats</h3>
-            <div class="delay-4 menuidem">
-                <div class="menu-déscription">
+            <div class="menu-item">
+                <div class="menu-description">
                     <h4>Poulet rôti aux herbes de Provence</h4>
                     <p>Et sa crème de truffe</p>
                     </div>
@@ -96,8 +96,8 @@
                     </div>
                     </div>
                 </div>
-            <div class="delay-5 menuidem">
-                <div class="menu-déscription">
+            <div class="menu-item">
+                <div class="menu-description">
                     <h4>Langouste rôtie</h4>
                     <p>Et ses légumes de saison</p>
                     </div>
@@ -110,8 +110,8 @@
                     </div>
                     </div>
                 </div>
-            <div class="delay-6 menuidem">
-                <div class="menu-déscription">
+            <div class="menu-item">
+                <div class="menu-description">
                     <h4>Côte de boeuf Angus</h4>
                     <p>Et sa purée de panais</p>
                     </div>
@@ -127,8 +127,8 @@
         </section>
         <section class="titre-menu">
             <h3>Desserts</h3>
-            <div class="delay-7 menuidem">
-                <div class="menu-déscription">
+            <div class="menu-item">
+                <div class="menu-description">
                     <h4>Farandole de desserts</h4>
                     <p>Du chef</p>
                     </div>
@@ -141,8 +141,8 @@
                     </div>
                     </div>
                 </div>
-            <div class="delay-8 menuidem">
-                <div class="menu-déscription">
+            <div class="menu-item">
+                <div class="menu-description">
                     <h4>Crème brulée</h4>
                     <p>Revisitée</p>
                     </div>
@@ -155,8 +155,8 @@
                     </div>
                     </div>
                 </div>
-            <div class="delay-9 menuidem">
-                <div class="menu-déscription">
+            <div class="menu-item">
+                <div class="menu-description">
                     <h4>Tiramisu</h4>
                     <p>À la noisette</p>
                     </div>
