--- a/À-la-française.html
+++ b/À-la-française.html
@@ -37,8 +37,8 @@
         <div class="entrée-plat-dessert">
         <section class="titre-menu">
             <h3>Entrées</h3>
-            <div class="delay-0 menuidem">
-                <div class="menu-déscription">
+            <div class="menu-item">
+                <div class="menu-description">
                 <h4>Tartare de poulpe acidulé</h4>
                 <p>Aux zestes d'orange</p>
                 </div>
@@ -51,8 +51,8 @@
                 </div>
                 </div>
             </div>
-            <div class="delay-1 menuidem">
-                <div class="menu-déscription">
+            <div class="menu-item">
+                <div class="menu-description">
                     <h4>Velouté de légumes d'antan</h4>
                     <p>Carotte, panais, topinambour</p>
                     </div>
@@ -65,8 +65,8 @@
                     </div>
                     </div>
                 </div>
-            <div class="delay-2 menuidem">
-                <div class="menu-déscription">
+            <div class="menu-item">
+                <div class="menu-description">
                     <h4>Soupe à l'oignon</h4>
                     <p>Revisitée</p>
                     </div>
@@ -82,8 +82,8 @@
         </section>
         <section class="titre-menu">
             <h3>Plats</h3>
-            <div class="delay-4 menuidem">
-                <div class="menu-déscription">
+            <div class="menu-item">
+                <div class="menu-description">
                     <h4>Coquilles Saint-Jacques</h4>
                     <p>Accompagnées d'une purée de panais</p>
                     </div>
@@ -96,8 +96,8 @@
                     </div>
                     </div>
                 </div>
-            <div class="delay-5 menuidem">
-                <div class="menu-déscription">
+            <div class="menu-item">
+                <div class="menu-description">
                     <h4>Magret de canard</h4>
                     <p>Et parmentier de pommes de terre</p>
                     </div>
@@ -110,8 +110,8 @@
                     </div>
                     </div>
                 </div>
-            <div class="delay-6 menuidem">
-                <div class="menu-déscription">
+            <div class="menu-item">
+                <div class="menu-description">
                     <h4>Pigeonneau d’Ille-et-Vilaine</h4>
                     <p>Sur son lit de gnocchis aux légumes</p>
                     </div>
@@ -127,8 +127,8 @@
         </section>
         <section class="titre-menu">
             <h3>Desserts</h3>
-            <div class="delay-7 menuidem">
-                <div class="menu-déscription">
+            <div class="menu-item">
+                <div class="menu-description">
                     <h4>Pétales de violettes glacés</h4>
                     <p>Et purée de noisettes</p>
                     </div>
@@ -141,8 +141,8 @@
                     </div>
                     </div>
                 </div>
-            <div class="delay-8 menuidem">
-                <div class="menu-déscription">
+            <div class="menu-item">
+                <div class="menu-description">
                     <h4>Fondant au chocolat</h4>
                     <p>Revisité</p>
                     </div>
@@ -155,8 +155,8 @@
                     </div>
                     </div>
                 </div>
-            <div class="delay-9 menuidem">
-                <div class="menu-déscription">
+            <div class="menu-item">
+                <div class="menu-description">
                     <h4>Millefeuille croustillant</h4>
                     <p>Myrtilles et pâte d’amande</p>
                     </div>
