animation de coeur sur la page aceuille et les pages restaurants

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                 <p>Ménilmontant</p>
                 <div class="heart">
                 <i class="icone-aime far fa-heart"></i>
+                <i class="icone-aime-2 fas fa-heart"></i>
                 </div>
             </figcaption>
             </figure>
@@ -71,6 +72,7 @@
                 <p>Charonne</p>
                 <div class="heart">
                     <i class="icone-aime far fa-heart"></i>
+                    <i class="icone-aime-2 fas fa-heart"></i>
                 </div>
             </figcaption>
             </figure> 
@@ -86,6 +88,7 @@
                 <p>Cité rouge</p>
                 <div class="heart">
                     <i class="icone-aime far fa-heart"></i>
+                    <i class="icone-aime-2 fas fa-heart"></i>
                 </div>
             </figcaption>
             </figure>
@@ -100,6 +103,7 @@
                 <p>Folie-méricourt</p>
                 <div class="heart">
                     <i class="icone-aime far fa-heart"></i>
+                    <i class="icone-aime-2 fas fa-heart"></i>
                 </div>
             </figcaption>
             </figure>
