ajouter une adresse mail sur contact pour toute les pages html

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <a href="#"><p><i class="fa-utensils fas"></i>Proposer un restaurant</p></a>
     <a href="#"><p><i class="fa-hands-helping fas"></i>Devenir partenaire</p></a>
     <a href="#"><p>Mentions légales</p></a>
-    <a href="#"><p>Contact</p></a>
+    <a href="mailto:contact@example.com"><p>Contact</p></a>
     </div>
 </footer>
 </body>
