modifier les animations les menus de restaurant

--- a/Le-délice-des-sens.html
+++ b/Le-délice-des-sens.html
@@ -37,7 +37,7 @@
         <div class="entrée-plat-dessert">
         <section class="titre-menu">
             <h3>Entrées</h3>
-            <div class="menu-item">
+            <div class="menu-item animate-0">
                 <div class="menu-description">
                 <h4>Tartare de thon</h4>
                 <p>Assaisonné au yuzu</p>
@@ -51,7 +51,7 @@
                 </div>
                 </div>
             </div>
-            <div class="menu-item">
+            <div class="menu-item animate-1">
                 <div class="menu-description">
                     <h4>Bouchée de homard croustillant</h4>
                     <p>Et sa farandole de petits légumes</p>
@@ -65,7 +65,7 @@
                     </div>
                     </div>
                 </div>
-            <div class="menu-item">
+            <div class="menu-item animate-2">
                 <div class="menu-description">
                     <h4>Velouté de cèpes</h4>
                     <p>Aux truffes</p>
@@ -82,7 +82,7 @@
         </section>
         <section class="titre-menu">
             <h3>Plats</h3>
-            <div class="menu-item">
+            <div class="menu-item animate-3">
                 <div class="menu-description">
                     <h4>Poulet rôti aux herbes de Provence</h4>
                     <p>Et sa crème de truffe</p>
@@ -96,7 +96,7 @@
                     </div>
                     </div>
                 </div>
-            <div class="menu-item">
+            <div class="menu-item animate-4">
                 <div class="menu-description">
                     <h4>Langouste rôtie</h4>
                     <p>Et ses légumes de saison</p>
@@ -110,7 +110,7 @@
                     </div>
                     </div>
                 </div>
-            <div class="menu-item">
+            <div class="menu-item animate-5">
                 <div class="menu-description">
                     <h4>Côte de boeuf Angus</h4>
                     <p>Et sa purée de panais</p>
@@ -127,7 +127,7 @@
         </section>
         <section class="titre-menu">
             <h3>Desserts</h3>
-            <div class="menu-item">
+            <div class="menu-item animate-6">
                 <div class="menu-description">
                     <h4>Farandole de desserts</h4>
                     <p>Du chef</p>
@@ -141,7 +141,7 @@
                     </div>
                     </div>
                 </div>
-            <div class="menu-item">
+            <div class="menu-item animate-7">
                 <div class="menu-description">
                     <h4>Crème brulée</h4>
                     <p>Revisitée</p>
@@ -155,7 +155,7 @@
                     </div>
                     </div>
                 </div>
-            <div class="menu-item">
+            <div class="menu-item animate-8">
                 <div class="menu-description">
                     <h4>Tiramisu</h4>
                     <p>À la noisette</p>
