--- a/La-note-enchantée.html
+++ b/La-note-enchantée.html
@@ -37,7 +37,7 @@
         <div class="entrée-plat-dessert">
         <section class="titre-menu">
             <h3>Entrées</h3>
-            <div class="menu-item">
+            <div class="menu-item animate-0">
                 <div class="menu-description">
                 <h4>Ravioles de foie gras</h4>
                 <p>Accompagnés de leur crème à la truffe</p>
@@ -51,7 +51,7 @@
                 </div>
                 </div>
             </div>
-            <div class="menu-item">
+            <div class="menu-item animate-1">
                 <div class="menu-description">
                     <h4>Caviar osciètre</h4>
                     <p>Sur blini à la farine de blé noir</p>
@@ -65,7 +65,7 @@
                     </div>
                     </div>
                 </div>
-            <div class="menu-item">
+            <div class="menu-item animate-2">
                 <div class="menu-description">
                     <h4>Homard et espuma de potiron</h4>
                     <p>Mariné aux zestes d'orange</p>
@@ -79,7 +79,7 @@
                     </div>
                     </div>
                 </div>
-            <div class="menu-item">
+            <div class="menu-item animate-3">
                 <div class="menu-description">
                     <h4>Foie gras de canard cuit entier</h4>
                     <p>Confiture de figue et pain toasté</p>
@@ -96,7 +96,7 @@
         </section>
         <section class="titre-menu">
             <h3>Plats</h3>
-            <div class="menu-item">
+            <div class="menu-item animate-4">
                 <div class="menu-description">
                     <h4>Noix de coquilles Saint-Jacques</h4>
                     <p>Sur lit de purée de céleri-rave</p>
@@ -110,7 +110,7 @@
                     </div>
                     </div>
                 </div>
-            <div class="menu-item">
+            <div class="menu-item animate-5">
                 <div class="menu-description">
                     <h4>Langoustine poêlée</h4>
                     <p>Purée de patate douce</p>
@@ -124,7 +124,7 @@
                     </div>
                     </div>
                 </div>
-            <div class="menu-item">
+            <div class="menu-item animate-6">
                 <div class="menu-description">
                     <h4>Mijoté de queue de boeuf</h4>
                     <p>Et riz sauvage aux zestes de citron</p>
@@ -141,7 +141,7 @@
         </section>
         <section class="titre-menu">
             <h3>Desserts</h3>
-            <div class="menu-item">
+            <div class="menu-item animate-7">
                 <div class="menu-description">
                     <h4>Macaron noisette et chocolat</h4>
                     <p>Glace au caramel brun et sel de Guérande</p>
@@ -155,7 +155,7 @@
                     </div>
                     </div>
                 </div>
-            <div class="menu-item">
+            <div class="menu-item animate-8">
                 <div class="menu-description">
                     <h4>Baba au rhum revisité</h4>
                     <p>Avec son coulis de citron</p>
@@ -169,7 +169,7 @@
                     </div>
                     </div>
                 </div>
-            <div class="menu-item">
+            <div class="menu-item animate-9">
                 <div class="menu-description">
                     <h4>Tarte au citron meringuée </h4>
                     <p>Déstructurée</p>
