--- a/La-palette-du-goût.htm
+++ b/La-palette-du-goût.htm
@@ -38,7 +38,7 @@
         <div class="entrée-plat-dessert">
         <section class="titre-menu">
             <h3>Entrées</h3>
-            <div class="menu-item">
+            <div class="menu-item animate-0">
                 <div class="menu-description">
                 <h4>Fricassée d'escargot</h4>
                 <p>Au piment d'Espelette </p>
@@ -52,7 +52,7 @@
                 </div>
                 </div>
             </div>
-            <div class="menu-item">
+            <div class="menu-item animate-1">
                 <div class="menu-description">
                     <h4>Foie gras de canard mi-cuit</h4>
                     <p>Et ses copeaux de truffe noire</p>
@@ -66,7 +66,7 @@
                     </div>
                     </div>
                 </div>
-            <div class="menu-item">
+            <div class="menu-item animate-2">
                 <div class="menu-description">
                     <h4>Oeuf au plat</h4>
                     <p>Assaisonné à la truffe sur lit de caviar</p>
@@ -83,7 +83,7 @@
         </section>
         <section class="titre-menu">
             <h3>Plats</h3>
-            <div class="menu-item">
+            <div class="menu-item animate-3">
                 <div class="menu-description">
                     <h4>Filet de boeuf aux herbes</h4>
                     <p>Accompagné de sa ribambelle de légumes</p>
@@ -97,7 +97,7 @@
                     </div>
                     </div>
                 </div>
-            <div class="menu-item">
+            <div class="menu-item animate-4">
                 <div class="menu-description">
                     <h4>Parmentier de queue de boeuf</h4>
                     <p>À la truffe noire sur sa purée de panais</p>
@@ -111,7 +111,7 @@
                     </div>
                     </div>
                 </div>
-            <div class="menu-item">
+            <div class="menu-item animate-5">
                 <div class="menu-description">
                     <h4>Filet de turbot</h4>
                     <p>Aux agrumes</p>
@@ -126,7 +126,7 @@
                     </div>
                 </div>
         </section>
-        <section class="titre-menu">
+        <section class="titre-menu animate-6">
             <h3>Desserts</h3>
             <div class="menu-item">
                 <div class="menu-description">
@@ -142,7 +142,7 @@
                     </div>
                     </div>
                 </div>
-            <div class="menu-item">
+            <div class="menu-item animate-7">
                 <div class="menu-description">
                     <h4>Macaron au chocolat d'exception</h4>
                     <p>Et glace à la vanille de Madagascar</p>
@@ -156,7 +156,7 @@
                     </div>
                     </div>
                 </div>
-            <div class="menu-item">
+            <div class="menu-item animate-8">
                 <div class="menu-description">
                     <h4>Mousse au chocolat</h4>
                     <p>Au piment d'Espelette et à la truffe noire</p>
