--- a/À-la-française.html
+++ b/À-la-française.html
@@ -35,7 +35,7 @@
         </div>
         <!--section entrée-->
         <div class="entrée-plat-dessert">
-        <section class="titre-menu">
+        <section class="titre-menu animate-0">
             <h3>Entrées</h3>
             <div class="menu-item">
                 <div class="menu-description">
@@ -51,7 +51,7 @@
                 </div>
                 </div>
             </div>
-            <div class="menu-item">
+            <div class="menu-item animate-1">
                 <div class="menu-description">
                     <h4>Velouté de légumes d'antan</h4>
                     <p>Carotte, panais, topinambour</p>
@@ -65,7 +65,7 @@
                     </div>
                     </div>
                 </div>
-            <div class="menu-item">
+            <div class="menu-item animate-2">
                 <div class="menu-description">
                     <h4>Soupe à l'oignon</h4>
                     <p>Revisitée</p>
@@ -82,7 +82,7 @@
         </section>
         <section class="titre-menu">
             <h3>Plats</h3>
-            <div class="menu-item">
+            <div class="menu-item animate-3">
                 <div class="menu-description">
                     <h4>Coquilles Saint-Jacques</h4>
                     <p>Accompagnées d'une purée de panais</p>
@@ -96,7 +96,7 @@
                     </div>
                     </div>
                 </div>
-            <div class="menu-item">
+            <div class="menu-item animate-4">
                 <div class="menu-description">
                     <h4>Magret de canard</h4>
                     <p>Et parmentier de pommes de terre</p>
@@ -110,7 +110,7 @@
                     </div>
                     </div>
                 </div>
-            <div class="menu-item">
+            <div class="menu-item animate-5">
                 <div class="menu-description">
                     <h4>Pigeonneau d’Ille-et-Vilaine</h4>
                     <p>Sur son lit de gnocchis aux légumes</p>
@@ -127,7 +127,7 @@
         </section>
         <section class="titre-menu">
             <h3>Desserts</h3>
-            <div class="menu-item">
+            <div class="menu-item animate-6">
                 <div class="menu-description">
                     <h4>Pétales de violettes glacés</h4>
                     <p>Et purée de noisettes</p>
@@ -141,7 +141,7 @@
                     </div>
                     </div>
                 </div>
-            <div class="menu-item">
+            <div class="menu-item animate-7">
                 <div class="menu-description">
                     <h4>Fondant au chocolat</h4>
                     <p>Revisité</p>
@@ -155,7 +155,7 @@
                     </div>
                     </div>
                 </div>
-            <div class="menu-item">
+            <div class="menu-item animate-8">
                 <div class="menu-description">
                     <h4>Millefeuille croustillant</h4>
                     <p>Myrtilles et pâte d’amande</p>
