ajouter input class lieu sur index.htm et mobile style pour class lieu

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!--section paris belleville -->
     <div class="localisation">
         <i class="fa-map-marker-alt fas icone-localisation"></i>
-        <h2 class="paris-belleville">Paris, Belleville</h2>
+        <input class="lieu" type="search" name="lieu" placeholder="Paris, Belleville">
     </div>
 
 <section class="explorer">
