modifier menu-desktop

--- a/la--note-enchantée.html
+++ b/la--note-enchantée.html
@@ -32,6 +32,7 @@
         <div class="titre">
         <h2>La note enchantée</h2>
         <i  class="icone-aime far fa-heart"></i>
+        <i class="icone-aime-2 fas fa-heart"></i>
         </div>
         <!--section entrée-->
         <div class="entrée-plat-dessert">
