enlever les accents sur les liens

--- a/a-la-française.html
+++ b/a-la-française.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="menu-desktop.css">
     <link rel="stylesheet" href="menu-tablette.css">
     <link rel="shortcut icon" href="images/logo/favicon.png">
-    <title>La palette du goût</title>
+    <title>À la française</title>
 </head>
 <body>
       <!--HEADER-->
