--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <h2>Restaurants</h2>
     <div class="articles">
     <article class="carte-restaurants">
-        <a href="./la--palette-du-goût.htm">
+        <a href="./la-palette-du-gout.html">
             <figure class="carte">
             <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="la palette du gout" class="carte-img">
             <span class="nouveau">Nouveau</span>
@@ -63,7 +63,7 @@
         </a>
     </article>
     <article class="carte-restaurants">
-        <a href="./la--note-enchantée.html">
+        <a href="./la-note-enchantee.html">
             <figure class="carte">
             <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée" class="carte-img">
             <span class="nouveau">Nouveau</span>
@@ -95,7 +95,7 @@
             </a>
     </article>
     <article class="carte-restaurants">
-        <a href="./le--délice-des-sens.html">
+        <a href="./le--delice-des-sens.html">
             <figure class="carte">
             <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="la palette du gout" class="carte-img">
             <figcaption>
