--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="menu-desktop.css">
     <link rel="stylesheet" href="menu-tablette.css">
     <link rel="shortcut icon" href="images/logo/favicon.png">
-    <title>La palette du goût</title>
+    <title>La note enchantée</title>
 </head>
 <body>
       <!--HEADER-->
@@ -25,12 +25,12 @@
     </header>
     <!--section image-palette-->
     <div class="image-palette">
-        <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
+        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
     </div>
     <!--menu-->
     <main class="menu">
         <div class="titre">
-        <h2>Le délice des sens</h2>
+        <h2>La note enchantée</h2>
         <i  class="icone-aime far fa-heart"></i>
         <i class="icone-aime-2 fas fa-heart"></i>
         </div>
@@ -40,8 +40,8 @@
             <h3>Entrées</h3>
             <div class="menu-item animate-0">
                 <div class="menu-description">
-                <h4>Tartare de thon</h4>
-                <p>Assaisonné au yuzu</p>
+                <h4>Ravioles de foie gras</h4>
+                <p>Accompagnés de leur crème à la truffe</p>
                 <span>25€</span>
                 </div>
                 <div class="menu-confirmation">
@@ -52,8 +52,8 @@
             </div>
             <div class="menu-item animate-1">
                 <div class="menu-description">
-                    <h4>Bouchée de homard croustillant</h4>
-                    <p>Et sa farandole de petits légumes</p>
+                    <h4>Caviar osciètre</h4>
+                    <p>Sur blini à la farine de blé noir</p>
                     <span>35€</span>
                     </div>
                     <div class="menu-confirmation">
@@ -64,9 +64,21 @@
                 </div>
             <div class="menu-item animate-2">
                 <div class="menu-description">
-                    <h4>Velouté de cèpes</h4>
-                    <p>Aux truffes</p>
+                    <h4>Homard et espuma de potiron</h4>
+                    <p>Mariné aux zestes d'orange</p> 
                     <span>20€</span>
+                    </div>
+                    <div class="menu-confirmation">
+                        <div class="menu-icon"> 
+                        <i class="fas fa-check icon-confirmation"></i>
+                        </div>
+                    </div>
+                </div>
+            <div class="menu-item animate-3">
+                <div class="menu-description">
+                    <h4>Foie gras de canard cuit entier</h4>
+                    <p>Confiture de figue et pain toasté</p>
+                    <span>35€</span>
                     </div>
                     <div class="menu-confirmation">
                         <div class="menu-icon"> 
@@ -77,23 +89,11 @@
         </section>
         <section class="titre-menu">
             <h3>Plats</h3>
-            <div class="menu-item animate-3">
-                <div class="menu-description">
-                    <h4>Poulet rôti aux herbes de Provence</h4>
-                    <p>Et sa crème de truffe</p>
-                    <span>40€</span>
-                    </div>
-                    <div class="menu-confirmation">
-                        <div class="menu-icon"> 
-                        <i class="fas fa-check icon-confirmation"></i>
-                        </div>
-                    </div>
-                </div>
             <div class="menu-item animate-4">
                 <div class="menu-description">
-                    <h4>Langouste rôtie</h4>
-                    <p>Et ses légumes de saison</p>
-                    <span>35€</span>
+                    <h4>Noix de coquilles Saint-Jacques</h4>
+                    <p>Sur lit de purée de céleri-rave</p>
+                    <span>40€</span>
                     </div>
                     <div class="menu-confirmation">
                         <div class="menu-icon"> 
@@ -103,8 +103,20 @@
                 </div>
             <div class="menu-item animate-5">
                 <div class="menu-description">
-                    <h4>Côte de boeuf Angus</h4>
-                    <p>Et sa purée de panais</p>
+                    <h4>Langoustine poêlée</h4>
+                    <p>Purée de patate douce</p>
+                    <span>35€</span>
+                    </div>
+                    <div class="menu-confirmation">
+                        <div class="menu-icon"> 
+                        <i class="fas fa-check icon-confirmation"></i>
+                        </div>
+                    </div>
+                </div>
+            <div class="menu-item animate-6">
+                <div class="menu-description">
+                    <h4>Mijoté de queue de boeuf</h4>
+                    <p>Et riz sauvage aux zestes de citron</p>
                     <span>44€</span>
                     </div>
                     <div class="menu-confirmation">
@@ -116,23 +128,11 @@
         </section>
         <section class="titre-menu">
             <h3>Desserts</h3>
-            <div class="menu-item animate-6">
-                <div class="menu-description">
-                    <h4>Farandole de desserts</h4>
-                    <p>Du chef</p>
-                    <span>18€</span>
-                    </div>
-                    <div class="menu-confirmation">
-                        <div class="menu-icon"> 
-                        <i class="fas fa-check icon-confirmation"></i>
-                        </div>
-                    </div>
-                </div>
             <div class="menu-item animate-7">
                 <div class="menu-description">
-                    <h4>Crème brulée</h4>
-                    <p>Revisitée</p>
-                    <span>22€</span>
+                    <h4>Macaron noisette et chocolat</h4>
+                    <p>Glace au caramel brun et sel de Guérande</p>
+                    <span>18€</span>
                     </div>
                     <div class="menu-confirmation">
                         <div class="menu-icon"> 
@@ -142,8 +142,20 @@
                 </div>
             <div class="menu-item animate-8">
                 <div class="menu-description">
-                    <h4>Tiramisu</h4>
-                    <p>À la noisette</p>
+                    <h4>Baba au rhum revisité</h4>
+                    <p>Avec son coulis de citron</p>
+                    <span>22€</span>
+                    </div>
+                    <div class="menu-confirmation">
+                        <div class="menu-icon"> 
+                        <i class="fas fa-check icon-confirmation"></i>
+                        </div>
+                    </div>
+                </div>
+            <div class="menu-item animate-9">
+                <div class="menu-description">
+                    <h4>Tarte au citron meringuée </h4>
+                    <p>Déstructurée</p>
                     <span>23€</span>
                     </div>
                     <div class="menu-confirmation">
@@ -153,7 +165,7 @@
                     </div>
                 </div>
         </section>
-        </div>
+        </div>  
         <div class="commander">
             <button class="button-commander">Commander</button>
         </div>
