--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -40,10 +40,14 @@
             <h3>Entrées</h3>
             <div class="menu-item animate-0">
                 <div class="menu-description">
-                <h4>Fricassée d'escargot</h4>
-                <p>Au piment d'Espelette</p>
-                <div class="prix">25€</div>
+                    <h4>Fricassée d'escargot</h4>
+
+                    <span class="menu-prix">
+                        <span class="menu-span">Au piment d'Espelette</span>
+                        <span class="prix">25€</span>
+                    </span>
                 </div>
+
                 <div class="menu-confirmation">
                     <div class="menu-icon"> 
                     <i class="fas fa-check icon-confirmation"></i>
